--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -61,8 +61,81 @@
   color: white;
 }
 
+.searchbar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.burger {
+  width: 50px;
+  height: 35px;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  display: none;
+  z-index: 10;
+}
+
+.burger span {
+  width: 100%;
+  height: 6px;
+  background-color: #e50914;
+  transition: 0.2s ease;
+}
+
+.burger span:nth-child(1) {
+  width: 100%;
+  height: 6px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.burger span:nth-child(2) {
+  position: absolute;
+  top: 14px;
+  left: 0;
+}
+.burger span:nth-child(3) {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.burger:hover span:nth-child(1) {
+  width: 70%;
+}
+
+.burger:hover span:nth-child(2) {
+  width: 40%;
+}
+
+.burger:hover span:nth-child(3) {
+  width: 90%;
+}
+
+.burger.active span:nth-child(1) {
+  top: 14px;
+  width: 80%;
+  transform: rotate(45deg);
+}
+.burger.active span:nth-child(2) {
+  left: -100%;
+}
+.burger.active span:nth-child(3) {
+  top: 14px;
+  width: 80%;
+  transform: rotate(-45deg);
+}
+
 @media (max-width: 749px) {
   .navlinks {
     display: none;
+  }
+
+  .burger {
+    display: flex;
   }
 }
