--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   width: 330px;
   height: 200px;
-  background-color: red;
+  background-color: gray;
   position: relative;
   overflow: hidden;
 }
